--- a/index.html
+++ b/index.html
@@ -2,25 +2,24 @@
 <html lang="id">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
-  <title>Peta NDVI per Bulan</title>
+  <meta name="viewport" content="initial-scale=1, user-scalable=no, maximum-scale=1, width=device-width" />
+  <title>Peta NDVI 2024</title>
 
+  <!-- CSS -->
   <link rel="stylesheet" href="./resources/ol.css" />
-  <link rel="stylesheet" href="./resources/fontawesome-all.min.css" />
   <link rel="stylesheet" href="./resources/ol-layerswitcher.css" />
-  <link rel="stylesheet" href="./resources/qgis2web.css" />
 
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      width: 100%;
       height: 100%;
+      font-family: Arial, sans-serif;
     }
 
     #map {
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: 100%;
     }
 
     #bulanNDVI {
@@ -30,8 +29,8 @@
       z-index: 1000;
       background: white;
       padding: 6px 10px;
-      font-size: 14px;
       border-radius: 4px;
+      font-size: 14px;
       border: 1px solid #ccc;
     }
 
@@ -40,8 +39,7 @@
       background-color: white;
       padding: 10px;
       border: 1px solid #ccc;
-      bottom: 12px;
-      left: -50px;
+      border-radius: 4px;
       min-width: 200px;
     }
 
@@ -50,30 +48,32 @@
       position: absolute;
       top: 2px;
       right: 8px;
+      color: #888;
     }
 
-    .ol-popup:after, .ol-popup:before {
-      top: 100%;
-      border: solid transparent;
-      content: " ";
-      height: 0;
-      width: 0;
+    .ndvi-legend {
       position: absolute;
-      pointer-events: none;
+      bottom: 10px;
+      right: 10px;
+      background: white;
+      padding: 10px;
+      border-radius: 5px;
+      font-size: 12px;
+      border: 1px solid #ccc;
+      z-index: 1000;
     }
 
-    .ol-popup:after {
-      border-top-color: white;
-      border-width: 10px;
-      left: 48px;
-      margin-left: -10px;
+    .ndvi-legend div {
+      display: flex;
+      align-items: center;
+      margin-bottom: 5px;
     }
 
-    .ol-popup:before {
-      border-top-color: #ccc;
-      border-width: 11px;
-      left: 48px;
-      margin-left: -11px;
+    .ndvi-legend span {
+      width: 20px;
+      height: 12px;
+      margin-right: 6px;
+      display: inline-block;
     }
   </style>
 </head>
@@ -86,7 +86,7 @@
     <option value="NDVI_03_2024_4">Maret 2024</option>
   </select>
 
-  <!-- Map & Popup -->
+  <!-- Map -->
   <div id="map">
     <div id="popup" class="ol-popup">
       <a href="#" id="popup-closer" class="ol-popup-closer">✖</a>
@@ -94,15 +94,24 @@
     </div>
   </div>
 
-  <!-- Script Library -->
+  <!-- Legend -->
+  <div class="ndvi-legend">
+    <strong>NDVI</strong>
+    <div><span style="background:#d7191c;"></span> 0.0–0.2</div>
+    <div><span style="background:#fdae61;"></span> 0.2–0.3</div>
+    <div><span style="background:#ffffbf;"></span> 0.3–0.4</div>
+    <div><span style="background:#a6d96a;"></span> 0.4–0.6</div>
+    <div><span style="background:#1a9641;"></span> >0.6</div>
+  </div>
+
+  <!-- JS -->
   <script src="./resources/ol.js"></script>
-  <script src="./resources/ol-layerswitcher.js"></script>
   <script src="./resources/qgis2web_expressions.js"></script>
   <script src="./resources/functions.js"></script>
+  <script src="./resources/ol-layerswitcher.js"></script>
   <script src="./resources/Autolinker.min.js"></script>
-  <script src="./resources/qgis2web.js"></script>
 
-  <!-- Layer & Style -->
+  <!-- Layer Files -->
   <script src="./layers/Administrasi_Kecamatan_1.js"></script>
   <script src="./layers/NDVI_01_2024_2.js"></script>
   <script src="./layers/NDVI_02_2024_3.js"></script>
@@ -112,82 +121,95 @@
   <script src="./styles/NDVI_02_2024_3_style.js"></script>
   <script src="./styles/NDVI_03_2024_4_style.js"></script>
   <script src="./layers/layers.js"></script>
+  <script src="./resources/qgis2web.js"></script>
 
-  <!-- Logic Interaktif -->
+  <!-- Interaktif NDVI -->
   <script>
     window.onload = function () {
-      const mapElement = document.getElementById("map");
-      const popupContainer = document.getElementById("popup");
-      const popupContent = document.getElementById("popup-content");
-      const closer = document.getElementById("popup-closer");
+      // Google Basemaps
+      const googleMaps = new ol.layer.Tile({
+        title: 'Google Maps',
+        type: 'base',
+        visible: true,
+        source: new ol.source.XYZ({
+          url: 'https://mt1.google.com/vt/lyrs=m&x={x}&y={y}&z={z}'
+        })
+      });
 
+      const googleSatellite = new ol.layer.Tile({
+        title: 'Google Satellite',
+        type: 'base',
+        visible: false,
+        source: new ol.source.XYZ({
+          url: 'https://mt1.google.com/vt/lyrs=s&x={x}&y={y}&z={z}'
+        })
+      });
+
+      map.getLayers().insertAt(0, googleSatellite);
+      map.getLayers().insertAt(0, googleMaps);
+
+      // Layer Switcher
+      const layerSwitcher = new ol.control.LayerSwitcher({
+        tipLabel: 'Pilih Peta Dasar'
+      });
+      map.addControl(layerSwitcher);
+
+      // Popup
       const overlay = new ol.Overlay({
-        element: popupContainer,
+        element: document.getElementById('popup'),
         autoPan: true,
         autoPanAnimation: { duration: 250 }
       });
-
       map.addOverlay(overlay);
 
-      closer.onclick = function () {
+      document.getElementById('popup-closer').onclick = function () {
         overlay.setPosition(undefined);
-        closer.blur();
         return false;
       };
 
-      // Ambil semua layer NDVI
+      // NDVI Layers
       const ndviLayers = {
-        "NDVI_01_2024_2": layersList.find(l => l.get("title") === "NDVI_01_2024_2"),
-        "NDVI_02_2024_3": layersList.find(l => l.get("title") === "NDVI_02_2024_3"),
-        "NDVI_03_2024_4": layersList.find(l => l.get("title") === "NDVI_03_2024_4")
+        'NDVI_01_2024_2': layersList.find(l => l.get('title') === 'NDVI_01_2024_2'),
+        'NDVI_02_2024_3': layersList.find(l => l.get('title') === 'NDVI_02_2024_3'),
+        'NDVI_03_2024_4': layersList.find(l => l.get('title') === 'NDVI_03_2024_4'),
       };
 
-      // Tampilkan hanya layer Januari saat awal
+      // Tampilkan default Januari
       for (const key in ndviLayers) {
-        ndviLayers[key].setVisible(key === "NDVI_01_2024_2");
+        ndviLayers[key].setVisible(key === 'NDVI_01_2024_2');
       }
 
-      const selectBulan = document.getElementById("bulanNDVI");
-
-      selectBulan.addEventListener("change", function () {
+      // Dropdown ganti bulan
+      document.getElementById('bulanNDVI').addEventListener('change', function () {
         const selected = this.value;
         for (const key in ndviLayers) {
           ndviLayers[key].setVisible(key === selected);
         }
       });
 
-      // Klik pada fitur untuk tampilkan popup
+      // Klik fitur untuk popup
       map.on('singleclick', function (evt) {
-        const selectedLayerId = selectBulan.value;
-        const activeLayer = ndviLayers[selectedLayerId];
-
+        const selected = document.getElementById('bulanNDVI').value;
+        const activeLayer = ndviLayers[selected];
         let found = false;
 
         map.forEachFeatureAtPixel(evt.pixel, function (feature, layer) {
           if (layer === activeLayer) {
             const props = feature.getProperties();
-            popupContent.innerHTML = `
-              <strong>NDVI ${selectedBulanLabel(selectedLayerId)}</strong><br>
-              Mean: ${props._mean ?? 'n/a'}<br>
-              Min: ${props._min ?? 'n/a'}<br>
-              Max: ${props._max ?? 'n/a'}
+            const html = `
+              <strong>${props.nama_kecamatan || 'Wilayah'}</strong><br>
+              Mean NDVI: ${props._mean?.toFixed(3) || 'n/a'}<br>
+              Min NDVI: ${props._min?.toFixed(3) || 'n/a'}<br>
+              Max NDVI: ${props._max?.toFixed(3) || 'n/a'}
             `;
+            document.getElementById('popup-content').innerHTML = html;
             overlay.setPosition(evt.coordinate);
             found = true;
           }
         });
 
-        if (!found) {
-          overlay.setPosition(undefined);
-        }
+        if (!found) overlay.setPosition(undefined);
       });
-
-      function selectedBulanLabel(key) {
-        if (key === 'NDVI_01_2024_2') return 'Januari 2024';
-        if (key === 'NDVI_02_2024_3') return 'Februari 2024';
-        if (key === 'NDVI_03_2024_4') return 'Maret 2024';
-        return '';
-      }
     };
   </script>
 </body>
